--- a/Config/config.ini
+++ b/Config/config.ini
@@ -1,5 +1,5 @@
 [credentials]
 resource = ec2
 region = us-east-1
-access_key_id = QUtJQVFIS0pVVzVTU0FEV01IV1g=
-secret_access_key = V1pzdlJQTFB5TGNUN2taTlFtVm82Q05qWmVHUmhadjZiREU2K0ZVWg==
+access_key_id = QUtJQVFIS0pVVzVTU0FEV0
+secret_access_key = V1pzdlJQTFB5TGNUN2taTlFtVm82Q05qWmVHUmhadjZiREU2K0Z
